# bnmpy

./: .gitignore  README.md  README_TESTS.md  TESTING_GUIDE.md  main.py  pyproject.toml  pytest.ini
bnmpy/: __init__.py  api_client.py  browser_inspector.py  scraper.py  session_manager.py
notebooks/: tests.ipynb
scripts/: compare_requests.py  download_csvs.py  inspect_browser.py  run_scraper.py  run_scraper_csv.py  run_tests.py  test_authentication.py  test_captcha.py  test_numero_processo.py  test_scraper.py
tests/: README.md  __init__.py  test_api_client.py  test_browser_inspector.py  test_integration.py  test_session.py
