[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnmpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pandas>=2.0.0",
]

[tool.setuptools]
packages = ["bnmpy"]

[tool.setuptools.package-data]
bnmpy = ["py.typed"]
